<resources>
    <string name="app_name">Bien Taypá</string>
    <string name="slogan">Un Buen Lugar Para Compartir...!!!</string>
    <string name="bienvenido">Bienvenido(a)</string>
    <string name="nivel_de_seguridad">Nivel de Seguridad</string>
    <string name="comuna">Comuna</string>
    <string name="direccion">Dirección</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="contraseña">Contraseña</string>
    <string name="numero_de_telefono">Número de Teléfono</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos</string>
    <string name="mail">Mail</string>
    <string name="ingresar">INGRESAR</string>
    <string name="quienes_somos">Quienes Somos</string>
    <string name="servicio_a_domicilio">Servicio a Domicilio\nRetiro en Local</string>
    <string name="contactanos">Contáctanos</string>
    <string name="reservar_mesa">Reservar Mesa\nPedir en Línea</string>
    <string name="nombre_usuario">nombre_usuario</string>
    <string name="procesos">Procesos</string>
    <string name="lista_de_pedidos">Lista de pedidos</string>
    <string name="hacer_pedido">Hacer pedido</string>
    <string name="nuestro_equipo">Nuestro Equipo</string>
    <string name="restaurante">Restaurante</string>
    <string name="eventos">Eventos</string>

    <string-array name="tipos_usuarios">
        <item>Creador</item>
        <item>Propietario</item>
        <item>Gerente</item>
        <item>Administrador</item>
        <item>Cajero</item>
        <item>Jefe de Cocina</item>
        <item>Cocinero</item>
        <item>BarTender</item>
        <item>Garzón</item>
        <item>Público en General</item>
    </string-array>

</resources>